--- a/service-overviews-lts/api-keys-service-overview.mdx
+++ b/service-overviews-lts/api-keys-service-overview.mdx
@@ -1,6 +1,6 @@
 # API Keys service overview
 
-Coralogix API Keys provide secure, fine-grained access control for all platform APIs, enabling safe and auditable integrations with third-party systems, CI/CD pipelines, and automation scripts. The API Keys API allows users to programmatically create, retrieve, update, and delete API keys, each scoped with specific permissions or permission presets. Keys can be assigned to users, teams, or organizations, and tailored with granular read/write permissions across various services.
+Coralogix API Keys provide secure, fine-grained access control for all platform APIs, enabling safe and auditable integrations with third-party systems, CI/CD pipelines, and automation scripts. The API Keys API allows users to programmatically create, retrieve, update, and delete API keys, each scoped with specific permissions or permission presets. In addition, API keys support policy-based access control (PBAC), letting you control which users and groups can view or manage each key through configurable access policies. Keys can be assigned to users, teams, or organizations, and tailored with granular read/write permissions across Coralogix services. 
 Learn more in our [API Keys](https://coralogix.com/docs/user-guides/account-management/api-keys/api-keys/) documentation.
 
 ## Examples
